I was weighting the opacity not the line width.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ $(document).ready(function() {
                 var exportPath = new google.maps.Polyline({
                     path: path,
                     strokeColor: "#FF0000",
-                    strokeOpacity: 0.1 + weight * 10,
-                    strokeWeight: 2
+                    strokeOpacity: 1,
+                    strokeWeight: 0.1 + weight * 10
                   });
                 
                 exportPath.setMap(map);
