fixed the creating pivot nodes.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ $(document).ready(function() {
                               //todo update node structure.
                               //todo handle merges.
 
-                              var pn = nodeOf(event.latLng);
+                              var pn = nodeOf(pivotPoint);
 
                               var node2 = data.nodes[n2];
                               var node1 = data.nodes[n1];
