Allow multiple selection lines to be drawn

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ $(document).ready(function() {
 
 
                         redraw();
+                        multiP1 = null;
+                        multiP2 = null;
                     } else {
                         multiP1 = event.latLng;
                         alert('multi point 1');
