redraw moving pivot

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@ $(document).ready(function() {
                 }
             }
         });
+
+        redraw();
     }
 
     function addToPivot(pivot, node, parent){
