use new parent, in move node

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ $(document).ready(function() {
                             }
                         });
                         $.each(tomove, function(key,value){
-                            addToPivot(nodeOf(pivotPoint.getPosition()),value[0],value[1]);
+                            addToPivot(nodeOf(pivotPoint.getPosition()),value[0]);
                         });
 
 
@@ -140,7 +140,8 @@ $(document).ready(function() {
                       var n1 = nodeOf(path.getArray()[0]);
                       var n2 = nodeOf(path.getArray()[1]);
 
-                      addToPivot(nodeOf(pivotPoint.getPosition()),n2,n1);
+                      addToPivot(nodeOf(pivotPoint.getPosition()),n2); //hope this is further away from source.
+                      redraw();
                   }
              });
             return pathExports;
@@ -163,20 +164,23 @@ $(document).ready(function() {
         redraw();
     }
 
-    function addToPivot(pivot, node, parent){
-        if(node == undefined | pivot == undefined | parent == undefined){
+    function addToPivot(pivot, node){
+        if(node == undefined | pivot == undefined){
             //this could introduce errors in the data structure.
-            console.log('undefined in addToPivot',node,pivot,parent);
+            console.log('undefined in addToPivot',node,pivot);
             return;
         }
         //create pivot if it doesnt exist.
         // the pivots parent.
+        var parent = data.nodes[node].parent;
         if (!(pivot in data.nodes)){
             data.nodes[pivot] = {'parent':parent,'children':[]}; // create
             data.nodes[parent].children.push(pivot); // give parent
         }
         data.nodes[node].parent = pivot; // add pivot to node as new parent.
         data.nodes[pivot].children.push(node); // add pivot to node
+
+
 
         data.nodes[parent].children.splice(data.nodes[parent].children.indexOf(node),1); // remove node from parent;
     }
